--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
         "newlinesBetween": "always",
         "groups": [
           "/^react/",
+          "/^next/",
           "module",
           [
             "parent",
