--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.24.0",
+    "chrome-aws-lambda": "^10.1.0",
     "next": "12.0.7",
-    "puppeteer": "^13.0.1",
+    "puppeteer-core": "^13.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
