--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "babel-plugin-styled-components": "^2.0.2",
+    "devtools-protocol": "^0.0.967529",
     "eslint": "^8.6.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-next": "12.0.7",
