--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chrome-aws-lambda": "^10.1.0",
     "next": "12.0.7",
     "next-auth": "^4.2.1",
+    "polished": "^4.1.4",
     "puppeteer-core": "^13.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
