--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@mui/material": "^5.4.1",
     "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.24.0",
+    "firebase": "^9.6.6",
     "next": "12.0.7",
-    "next-auth": "^4.2.1",
     "polished": "^4.1.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
