--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.4.1",
     "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.24.0",
+    "crypto": "^1.0.1",
     "firebase": "^9.6.6",
     "next": "12.0.7",
     "polished": "^4.1.4",
