--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.24.0",
     "crypto": "^1.0.1",
+    "date-fns": "^2.28.0",
     "firebase": "^9.6.6",
     "next": "12.0.7",
     "polished": "^4.1.4",
