--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@mui/material": "^5.4.1",
     "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.24.0",
+    "chart.js": "^3.7.1",
     "crypto": "^1.0.1",
     "date-fns": "^2.28.0",
     "firebase": "^9.6.6",
     "next": "12.0.7",
     "polished": "^4.1.4",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
     "react-toastify": "^8.1.1",
